force-app/main/default/objects/Agent_Action_History__c/Agent_Action_History__c.object-meta.xml
<CustomObject>
    <description>History of agentic actions</description>
    <label>Agent Action History</label>
    <nameField>
        <displayFormat>AAH-{0000000}</displayFormat>
        <label>Agent Action History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Action Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>