force-app/main/default/objects/Agent_Action_History__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Actions performed by agents</description>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>