force-app/main/default/objects/Agent_Action_History__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Name of agent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>