force-app/main/default/objects/Agent_Action_History__c/fields/Related_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Related Object Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Object Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>