force-app/main/default/objects/Agent_Action_History__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Related Record Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>